--- a/Zombies Interactive/Base.lproj/Main.storyboard
+++ b/Zombies Interactive/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="X5E-dJ-7wN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="X5E-dJ-7wN">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -320,38 +320,62 @@
                                     <action selector="missionsButton:" destination="B83-kc-EzL" eventType="touchUpInside" id="f6z-Yu-flq"/>
                                 </connections>
                             </button>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" usesAttributedText="YES" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhK-9y-E3l">
-                                <rect key="frame" x="16" y="275" width="288" height="285"/>
-                                <attributedString key="attributedText">
-                                    <fragment>
-                                        <string key="content">Note about music: While the app is not playing audio related to the mission, you will hear music from your own library. For this reason we suggest selecting a running playlist from your Music app before you start the mission. This will not work with Spotify (yet), sorry!</string>
-                                        <attributes>
-                                            <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                            <font key="NSFont" size="17" name="HelveticaNeue-Medium"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dhK-9y-E3l">
+                                <rect key="frame" x="12" y="323" width="296" height="237"/>
+                                <string key="text">Note about music: While the app is not playing audio related to the mission, you will hear music from your own library. For this reason we suggest selecting a running playlist from your Music app before you start the mission. This will not work with Spotify (yet), sorry!</string>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4DT-pU-5EW">
+                                <rect key="frame" x="255" y="275" width="51" height="31"/>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Play my Music during the run" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FgD-6J-jyX">
+                                <rect key="frame" x="16" y="280" width="221.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RdV-sb-aBZ">
+                                <rect key="frame" x="16" y="314" width="288" height="1"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="0ah-Tg-vEI"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="dhK-9y-E3l" firstAttribute="leading" secondItem="3XY-Bi-L1F" secondAttribute="leadingMargin" id="44s-cm-vzg"/>
+                            <constraint firstItem="dhK-9y-E3l" firstAttribute="leading" secondItem="3XY-Bi-L1F" secondAttribute="leadingMargin" constant="-4" id="44s-cm-vzg"/>
+                            <constraint firstItem="4DT-pU-5EW" firstAttribute="top" secondItem="dhK-9y-E3l" secondAttribute="bottom" constant="8" symbolic="YES" id="5eS-EI-c7I"/>
+                            <constraint firstItem="4DT-pU-5EW" firstAttribute="top" secondItem="1EZ-tM-fTU" secondAttribute="bottom" constant="8" id="6Fo-ov-ZbH"/>
+                            <constraint firstItem="dhK-9y-E3l" firstAttribute="top" secondItem="RdV-sb-aBZ" secondAttribute="bottom" constant="8" symbolic="YES" id="7X6-jL-YO2"/>
                             <constraint firstAttribute="centerX" secondItem="1EZ-tM-fTU" secondAttribute="centerX" id="7nM-Ro-xMi"/>
+                            <constraint firstItem="A2q-G4-38J" firstAttribute="top" secondItem="FgD-6J-jyX" secondAttribute="bottom" constant="8" symbolic="YES" id="9tD-6T-HGw"/>
+                            <constraint firstItem="dhK-9y-E3l" firstAttribute="top" secondItem="4DT-pU-5EW" secondAttribute="bottom" constant="8" symbolic="YES" id="Ad2-eV-k0w"/>
+                            <constraint firstItem="FgD-6J-jyX" firstAttribute="centerY" secondItem="4DT-pU-5EW" secondAttribute="centerY" id="Duw-x7-7uw"/>
                             <constraint firstAttribute="leadingMargin" secondItem="1EZ-tM-fTU" secondAttribute="leading" constant="16" id="Fat-dL-Oat"/>
+                            <constraint firstItem="RdV-sb-aBZ" firstAttribute="leading" secondItem="FgD-6J-jyX" secondAttribute="leading" id="KiX-Zi-aNy"/>
                             <constraint firstItem="1EZ-tM-fTU" firstAttribute="top" secondItem="hZL-90-NIV" secondAttribute="bottom" id="M0s-Eg-HDt"/>
+                            <constraint firstItem="FgD-6J-jyX" firstAttribute="leading" secondItem="3XY-Bi-L1F" secondAttribute="leadingMargin" id="PTg-0G-8XY"/>
+                            <constraint firstItem="RdV-sb-aBZ" firstAttribute="top" secondItem="4DT-pU-5EW" secondAttribute="bottom" constant="8" symbolic="YES" id="V8j-7y-AZE"/>
                             <constraint firstAttribute="trailingMargin" secondItem="1EZ-tM-fTU" secondAttribute="trailing" constant="-16" id="VjS-JK-wOs"/>
                             <constraint firstItem="A2q-G4-38J" firstAttribute="top" secondItem="dhK-9y-E3l" secondAttribute="bottom" constant="8" symbolic="YES" id="WAR-g3-mjy"/>
                             <constraint firstItem="A2q-G4-38J" firstAttribute="top" secondItem="1EZ-tM-fTU" secondAttribute="bottom" constant="162" id="XER-e6-wma"/>
+                            <constraint firstItem="A2q-G4-38J" firstAttribute="top" secondItem="dhK-9y-E3l" secondAttribute="bottom" constant="8" symbolic="YES" id="b4q-Gu-zBD"/>
                             <constraint firstAttribute="leadingMargin" secondItem="1EZ-tM-fTU" secondAttribute="leading" constant="-20" id="cSo-xY-Vxz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="hZL-90-NIV" secondAttribute="trailing" constant="-16" id="fYv-nQ-vBh"/>
+                            <constraint firstItem="A2q-G4-38J" firstAttribute="top" secondItem="4DT-pU-5EW" secondAttribute="bottom" constant="8" symbolic="YES" id="gOv-fb-zid"/>
                             <constraint firstItem="1EZ-tM-fTU" firstAttribute="top" secondItem="VXi-vT-o9f" secondAttribute="bottom" constant="8" symbolic="YES" id="gU2-vm-Ubc"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4DT-pU-5EW" secondAttribute="trailing" id="hN3-YL-oAE"/>
                             <constraint firstAttribute="centerX" secondItem="1EZ-tM-fTU" secondAttribute="centerX" id="i85-MM-we6"/>
                             <constraint firstItem="dhK-9y-E3l" firstAttribute="top" secondItem="1EZ-tM-fTU" secondAttribute="bottom" constant="8" symbolic="YES" id="mjX-PM-NWX"/>
                             <constraint firstItem="hZL-90-NIV" firstAttribute="top" secondItem="VXi-vT-o9f" secondAttribute="bottom" id="mzk-1G-Zys"/>
                             <constraint firstItem="hZL-90-NIV" firstAttribute="leading" secondItem="3XY-Bi-L1F" secondAttribute="leadingMargin" constant="-16" id="o7B-oJ-qZt"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="dhK-9y-E3l" secondAttribute="trailing" id="pLc-Vn-cyo"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dhK-9y-E3l" secondAttribute="trailing" constant="-4" id="pLc-Vn-cyo"/>
                             <constraint firstAttribute="trailingMargin" secondItem="1EZ-tM-fTU" secondAttribute="trailing" constant="-20" id="rQb-XM-1cZ"/>
+                            <constraint firstItem="FgD-6J-jyX" firstAttribute="top" secondItem="1EZ-tM-fTU" secondAttribute="bottom" constant="6.5" id="vv4-MX-FZw"/>
+                            <constraint firstItem="RdV-sb-aBZ" firstAttribute="trailing" secondItem="4DT-pU-5EW" secondAttribute="trailing" id="zBQ-De-qzR"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -360,11 +384,21 @@
                                 <exclude reference="gU2-vm-Ubc"/>
                                 <exclude reference="i85-MM-we6"/>
                                 <exclude reference="rQb-XM-1cZ"/>
+                                <exclude reference="vv4-MX-FZw"/>
+                                <exclude reference="Ad2-eV-k0w"/>
+                                <exclude reference="mjX-PM-NWX"/>
+                                <exclude reference="5eS-EI-c7I"/>
+                                <exclude reference="9tD-6T-HGw"/>
+                                <exclude reference="WAR-g3-mjy"/>
                                 <exclude reference="XER-e6-wma"/>
+                                <exclude reference="gOv-fb-zid"/>
                             </mask>
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" id="bnX-6K-b9C"/>
+                    <connections>
+                        <outlet property="musicSwitch" destination="4DT-pU-5EW" id="OsF-iF-wMo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="b1H-AF-17Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
