--- a/Zombies Interactive/Base.lproj/Main.storyboard
+++ b/Zombies Interactive/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="54e-LA-L0j">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="54e-LA-L0j">
                                 <rect key="frame" x="58" y="91" width="208" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="99" id="Jjd-x1-UKK"/>
@@ -349,7 +349,7 @@
                                     <constraint firstAttribute="height" constant="50" id="lfp-87-9kX"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <state key="normal" title="S1M16: Scouting Mission (~45 min)">
+                                <state key="normal" title="Loading ...">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -426,6 +426,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="bnX-6K-b9C"/>
                     <connections>
+                        <outlet property="missionLabel" destination="1EZ-tM-fTU" id="mvG-dS-Zde"/>
                         <outlet property="musicNotice" destination="dhK-9y-E3l" id="jpz-Is-o4i"/>
                         <outlet property="musicSwitch" destination="4DT-pU-5EW" id="OsF-iF-wMo"/>
                     </connections>
